@@ -67,5 +67,7 @@ int ipod_set_blank_mode(int blank);
 
 void ipod_beep(void);
 
+long ipod_get_hw_version(void);
+
 #endif
 
